Update meta data, add icon

--- a/armory-search.html
+++ b/armory-search.html
@@ -5,25 +5,23 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <title>Feenix Tools</title>
-    <link rel="canonical" href="https://warlorddrak.github.io/">
+    <link rel="canonical" href="https://warlorddrak.github.io/feenix-tools/armory-search.html">
 
     <meta name="author" content="Warlord Drak" />
-    <meta name="description" content="Feenix Tools" />
-    <meta name="keywords" content="" />
+    <meta name="description" content="Armory search for the new Feenix server" />
     <meta name="twitter:author" content="@WarlordDrak" />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="Armory search for the new Feenix server" />
     <meta name="twitter:creator" content="@WarlordDrak" />
-    <meta property="og:title" content="Feenix Tools" />
-    <meta property="og:url" content="https://warlorddrak.github.io/" />
-    <meta property="og:description" content="Tools for the new Feenix server" />
-    <meta property="og:image" content="https://warlorddrak.github.io/drak.png" />
+    <meta property="og:title" content="Feenix Tools - Armory Search" />
+    <meta property="og:url" content="https://warlorddrak.github.io/feenix-tools/armory-search.html" />
+    <meta property="og:description" content="Armory search for the new Feenix server" />
+    <meta property="og:image" content="drak.png" />
     <meta property="og:locale" content="en-US" />
 
+    <link rel="shortcut icon" href="drak.png">
     <!--
-<link rel="shortcut icon" href="https://warlorddrak.github.io/drak.png">
     <link rel="stylesheet" href="maybe.css">
     -->
-
 
 <script type="text/javascript" src="char_db.js"></script>
 <script type="text/javascript">
