--- a/armory-search.html
+++ b/armory-search.html
@@ -77,7 +77,7 @@ function search() {
 
     <h1>Feenix Armory Search</h1>
 
-    <input type="text" id="character_name" onkeyup="search()" />
+    <input type="text" id="character_name" onkeyup="search()" value="" />
     <a href="" id="armory_link"></a>
 
     <iframe id="armory_preview" src="" style="overflow:hidden;overflow-y:hidden;width:100%;height:82vh;border:none;margin:0;"></iframe>
