Really fix favicons

--- a/honor/index.html
+++ b/honor/index.html
@@ -15,10 +15,10 @@
     <meta property="og:title" content="WoW Classic Honor Calculator" />
     <meta property="og:url" content="https://warlorddrak.github.io/wow-tools/honor/" />
     <meta property="og:description" content="WoW Classic Honor Calculator" />
-    <meta property="og:image" content="drak.png" />
+    <meta property="og:image" content="https://warlorddrak.github.io/wow-tools/drak.png" />
     <meta property="og:locale" content="en-US" />
 
-    <link rel="shortcut icon" href="drak.png">
+    <link rel="shortcut icon" href="https://warlorddrak.github.io/wow-tools/drak.png">
     <link rel="stylesheet" href="https://cdn.rawgit.com/Chalarangelo/mini.css/v3.0.0/dist/mini-default.min.css">
 
 <script type="text/javascript">
