--- a/wowfeenix-armory/index.html
+++ b/wowfeenix-armory/index.html
@@ -15,13 +15,10 @@
     <meta property="og:title" content="Feenix Tools - Armory Search" />
     <meta property="og:url" content="https://warlorddrak.github.io/feenix-tools/armory-search.html" />
     <meta property="og:description" content="Armory search for the new Feenix server" />
-    <meta property="og:image" content="drak.png" />
+    <meta property="og:image" content="https://warlorddrak.github.io/wow-tools/drak.png" />
     <meta property="og:locale" content="en-US" />
 
-    <link rel="shortcut icon" href="drak.png">
-    <!--
-    <link rel="stylesheet" href="maybe.css">
-    -->
+    <link rel="shortcut icon" href="https://warlorddrak.github.io/wow-tools/drak.png">
 
 <script type="text/javascript" src="char_db.js"></script>
 <script type="text/javascript">
