Improve rpfactor feeling calc

--- a/honor/index.html
+++ b/honor/index.html
@@ -120,7 +120,7 @@ The smaller the gap, the more less for the bottom player(s) in the higher bracke
 
     <h3>Results</h3>
 
-    <textarea id="brackets_list" style="width:100%;height:500px;font-family:monospace;">
+    <textarea id="brackets_list" style="width:100%;height:555px;font-family:monospace;">
     </textarea>
 
     <script type="text/javascript">
@@ -178,8 +178,14 @@ const MIN_RANK_AFTER_UPDATE = round2dec(rp2rank(RP_AFTER_MIN_GAIN, RPFACTOR))
 const RANK_ESTIMATE = round2dec(rp2rank(RP_AFTER_GAIN_ESTIMATE, RPFACTOR))
 
 get('brackets_list').value = `Currently rank ${PARAMETERS.rank} (${CALC_RP} * ${RPFACTOR} = ${VIEW_RP}), decaying ${DECAY} RP\n`
+if (RPFACTOR < 1.0) {
+  var rankRPs = [60000.0, 55000.0, 50000.0, 45000.0, 40000.0, 35000.0, 30000.0, 25000.0]
+  for (var i = 0; i < rankRPs.length; i++) {
+    get('brackets_list').value += `With rpfactor of ${RPFACTOR}, reaching r${14 - i} is like going for r${round2dec(rp2rank(rankRPs[i] * RPFACTOR))} (cutoff)\n`
+  }
+}
 get('brackets_list').value += `With your estimated standing of ${STANDING}, you will be in bracket: ${brkt.bracket}\n`
-get('brackets_list').value += `Gaining between ${brkt.upperRp} and ${brkt.lowerRp} RP, estimating RP gain of ${RP_GAIN_ESTIMATE}\n`
+get('brackets_list').value += `Gaining between ${brkt.upperRp} and ${brkt.lowerRp} RP, estimating RP gain of ${round2dec(RP_GAIN_ESTIMATE)}\n`
 get('brackets_list').value += `Reaching between r${MAX_RANK_AFTER_UPDATE} and r${MIN_RANK_AFTER_UPDATE}, estimating rank ${RANK_ESTIMATE}\n\n`
 
 get('brackets_list').value += `Brackets:\n`
