Update honor calc notice for fenix

--- a/honor/index.html
+++ b/honor/index.html
@@ -97,12 +97,12 @@ function render_groups(groups) {
 
 <p>
 Estimates based on your current <code>rank</code> (default <code>7.0</code>), your estimated <code>standing</code> (default <code>50</code>) and an estimate for the total number of <code>players</code> (default <code>500</code>).
-Some private servers reduce the amount of RP required for a certain rank. You can control this with the <code>rpfactor</code> parameter (default <code>1.0</code>, neofeenix would be <code>0.67</code>).
+Some private servers reduce the amount of RP required for a certain rank. You can control this with the <code>rpfactor</code> parameter (default <code>1.0</code>, neofeenix would be <code>0.67</code>, fenix would be <code>0.5</code>).
 All parameters are passed as URL parameters, like this:
 </p>
 
 <pre>
-?rank=9.40&amp;standing=50&amp;players=600&amp;rpfactor=0.67
+?rank=9.40&amp;standing=50&amp;players=600&amp;rpfactor=0.5
 </pre>
 
 <p>
